--- a/config/crd/logging/logging.opni.io_loggings.yaml
+++ b/config/crd/logging/logging.opni.io_loggings.yaml
@@ -1182,6 +1182,28 @@ spec:
                     type: string
                   disableKubernetesFilter:
                     type: boolean
+                  dnsConfig:
+                    properties:
+                      nameservers:
+                        items:
+                          type: string
+                        type: array
+                      options:
+                        items:
+                          properties:
+                            name:
+                              type: string
+                            value:
+                              type: string
+                          type: object
+                        type: array
+                      searches:
+                        items:
+                          type: string
+                        type: array
+                    type: object
+                  dnsPolicy:
+                    type: string
                   enableUpstream:
                     type: boolean
                   envVars:
@@ -1353,6 +1375,8 @@ spec:
                         type: string
                       Time_as_Integer:
                         type: boolean
+                      storage.total_limit_size:
+                        type: string
                     type: object
                   grace:
                     format: int32
@@ -1386,6 +1410,8 @@ spec:
                       Docker_Mode:
                         type: string
                       Docker_Mode_Flush:
+                        type: string
+                      Docker_Mode_Parser:
                         type: string
                       Exclude_Path:
                         type: string
@@ -2727,6 +2753,28 @@ spec:
                     type: object
                   disablePvc:
                     type: boolean
+                  dnsConfig:
+                    properties:
+                      nameservers:
+                        items:
+                          type: string
+                        type: array
+                      options:
+                        items:
+                          properties:
+                            name:
+                              type: string
+                            value:
+                              type: string
+                          type: object
+                        type: array
+                      searches:
+                        items:
+                          type: string
+                        type: array
+                    type: object
+                  dnsPolicy:
+                    type: string
                   envVars:
                     items:
                       properties:
@@ -3157,6 +3205,34 @@ spec:
                   port:
                     format: int32
                     type: integer
+                  readinessDefaultCheck:
+                    properties:
+                      bufferFileNumber:
+                        type: boolean
+                      bufferFileNumberMax:
+                        format: int32
+                        type: integer
+                      bufferFreeSpace:
+                        type: boolean
+                      bufferFreeSpaceThreshold:
+                        format: int32
+                        type: integer
+                      failureThreshold:
+                        format: int32
+                        type: integer
+                      initialDelaySeconds:
+                        format: int32
+                        type: integer
+                      periodSeconds:
+                        format: int32
+                        type: integer
+                      successThreshold:
+                        format: int32
+                        type: integer
+                      timeoutSeconds:
+                        format: int32
+                        type: integer
+                    type: object
                   readinessProbe:
                     properties:
                       exec:
@@ -7390,6 +7466,8 @@ spec:
                               type: string
                             Time_as_Integer:
                               type: boolean
+                            storage.total_limit_size:
+                              type: string
                           type: object
                         grace:
                           format: int32
@@ -7407,6 +7485,8 @@ spec:
                             Docker_Mode:
                               type: string
                             Docker_Mode_Flush:
+                              type: string
+                            Docker_Mode_Parser:
                               type: string
                             Exclude_Path:
                               type: string
@@ -9129,6 +9209,28 @@ spec:
                     type: string
                   disableKubernetesFilter:
                     type: boolean
+                  dnsConfig:
+                    properties:
+                      nameservers:
+                        items:
+                          type: string
+                        type: array
+                      options:
+                        items:
+                          properties:
+                            name:
+                              type: string
+                            value:
+                              type: string
+                          type: object
+                        type: array
+                      searches:
+                        items:
+                          type: string
+                        type: array
+                    type: object
+                  dnsPolicy:
+                    type: string
                   enableUpstream:
                     type: boolean
                   envVars:
@@ -9300,6 +9402,8 @@ spec:
                         type: string
                       Time_as_Integer:
                         type: boolean
+                      storage.total_limit_size:
+                        type: string
                     type: object
                   grace:
                     format: int32
@@ -9333,6 +9437,8 @@ spec:
                       Docker_Mode:
                         type: string
                       Docker_Mode_Flush:
+                        type: string
+                      Docker_Mode_Parser:
                         type: string
                       Exclude_Path:
                         type: string
@@ -10674,6 +10780,28 @@ spec:
                     type: object
                   disablePvc:
                     type: boolean
+                  dnsConfig:
+                    properties:
+                      nameservers:
+                        items:
+                          type: string
+                        type: array
+                      options:
+                        items:
+                          properties:
+                            name:
+                              type: string
+                            value:
+                              type: string
+                          type: object
+                        type: array
+                      searches:
+                        items:
+                          type: string
+                        type: array
+                    type: object
+                  dnsPolicy:
+                    type: string
                   envVars:
                     items:
                       properties:
@@ -11104,6 +11232,34 @@ spec:
                   port:
                     format: int32
                     type: integer
+                  readinessDefaultCheck:
+                    properties:
+                      bufferFileNumber:
+                        type: boolean
+                      bufferFileNumberMax:
+                        format: int32
+                        type: integer
+                      bufferFreeSpace:
+                        type: boolean
+                      bufferFreeSpaceThreshold:
+                        format: int32
+                        type: integer
+                      failureThreshold:
+                        format: int32
+                        type: integer
+                      initialDelaySeconds:
+                        format: int32
+                        type: integer
+                      periodSeconds:
+                        format: int32
+                        type: integer
+                      successThreshold:
+                        format: int32
+                        type: integer
+                      timeoutSeconds:
+                        format: int32
+                        type: integer
+                    type: object
                   readinessProbe:
                     properties:
                       exec:
@@ -15337,6 +15493,8 @@ spec:
                               type: string
                             Time_as_Integer:
                               type: boolean
+                            storage.total_limit_size:
+                              type: string
                           type: object
                         grace:
                           format: int32
@@ -15354,6 +15512,8 @@ spec:
                             Docker_Mode:
                               type: string
                             Docker_Mode_Flush:
+                              type: string
+                            Docker_Mode_Parser:
                               type: string
                             Exclude_Path:
                               type: string
