--- a/images/python/Dockerfile
+++ b/images/python/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-slim as base
+FROM python:3.8-slim-bullseye as base
 
 #Base builder
 FROM base as builder1
@@ -49,7 +49,7 @@ FROM base-final as elasticdump
 RUN \
   apt-get update && \
   apt-get install -yqq wget gnupg && \
-  echo "deb https://deb.nodesource.com/node_14.x buster main" > /etc/apt/sources.list.d/nodesource.list && \
+  echo "deb https://deb.nodesource.com/node_14.x bullseye main" > /etc/apt/sources.list.d/nodesource.list && \
   wget -qO- https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - && \
   echo "deb https://dl.yarnpkg.com/debian/ stable main" > /etc/apt/sources.list.d/yarn.list && \
   wget -qO- https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
