--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -45831,8 +45831,19 @@ spec:
                   username:
                     type: string
                 type: object
+              nulogHyperparameters:
+                additionalProperties:
+                  anyOf:
+                  - type: integer
+                  - type: string
+                  x-kubernetes-int-or-string: true
+                type: object
               s3:
                 properties:
+                  drainS3Bucket:
+                    description: Bucket used to persiste drain models.  It not set
+                      will use opni-drain-models
+                    type: string
                   external:
                     description: If set, Opni will connect to an external S3 endpoint.
                       Cannot be set at the same time as `internal`.
@@ -45874,6 +45885,10 @@ spec:
                             type: string
                         type: object
                     type: object
+                  nulogS3Bucket:
+                    description: Bucket used to persist nulog models.  If not set
+                      will use opni-nulog-models.
+                    type: string
                 type: object
               services:
                 properties:
@@ -57119,17 +57134,12 @@ spec:
             description: PretrainedModelSpec defines the desired state of PretrainedModel
             properties:
               hyperparameters:
-                items:
-                  properties:
-                    name:
-                      type: string
-                    value:
-                      type: string
-                  required:
-                  - name
-                  - value
-                  type: object
-                type: array
+                additionalProperties:
+                  anyOf:
+                  - type: integer
+                  - type: string
+                  x-kubernetes-int-or-string: true
+                type: object
               source:
                 properties:
                   container:
