--- a/config/samples/_v1beta1_opnicluster.yaml
+++ b/config/samples/_v1beta1_opnicluster.yaml
@@ -7,15 +7,21 @@ spec:
   version: v0.1.2
   services:
     inference:
-      enabled: false
+      enabled: true
+      image: quay.io/dbason/opni-inference-service:test
+      imagePullPolicy: Always
       pretrainedModels:
         - name: control-plane
+    preprocessing:
+      image: quay.io/dbason/opni-preprocessing-service:debug
+    drain:
+      image: quay.io/dbason/opni-drain-service:debug
+    payloadReceiver:
+      image: quay.io/dbason/opni-payload-receiver-service:debug
+    gpuController:
+      enabled: false
+      image: quay.io/dbason/opni-gpu-service-controller:debug
   elastic:
-    workloads:
-      data:
-        dedicatedPod: false
-      client:
-        dedicatedPod: false
     version: 1.13.2
   nats:
     authMethod: nkey
