--- a/config/samples/_v1beta1_opnicluster.yaml
+++ b/config/samples/_v1beta1_opnicluster.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: default
 spec:
   version: v0.1.2
+  deployLogCollector: true
   services:
     inference:
       enabled: true
