--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -41730,6 +41730,8 @@ spec:
             properties:
               defaultRepo:
                 type: string
+              deployLogCollector:
+                type: boolean
               elastic:
                 properties:
                   configSecret:
@@ -47104,6 +47106,10 @@ spec:
                 items:
                   type: string
                 type: array
+              indexState:
+                type: string
+              logState:
+                type: string
               natsReplicas:
                 format: int32
                 type: integer
