--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -16517,7 +16517,7 @@ spec:
     listKind: LogAdapterList
     plural: logadapters
     singular: logadapter
-  scope: Namespaced
+  scope: Cluster
   versions:
   - name: v1beta1
     schema:
