--- a/config/samples/_v1_clusterpolicy-vgpu.yaml
+++ b/config/samples/_v1_clusterpolicy-vgpu.yaml
@@ -152,7 +152,7 @@ spec:
       env:
         - name: WITH_WORKLOAD
           value: "true"
-    repository: your.registry.local
+    repository: joekralicky
     securityContext:
       privileged: true
       seLinuxOptions:
