--- a/config/samples/_v1_clusterpolicy.yaml
+++ b/config/samples/_v1_clusterpolicy.yaml
@@ -153,7 +153,7 @@ spec:
       env:
         - name: WITH_WORKLOAD
           value: "true"
-    repository: your.registry.local
+    repository: joekralicky
     securityContext:
       privileged: true
       seLinuxOptions:
